--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,18 +1,28 @@
+li{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+ul{
+  padding: 10px;
+  margin: 0;
+}
+
 .card {
-  width: 200px; /* фиксированная ширина */
-  height: 250px; /* фиксированная высота */
+  width: 200px;
+  height: 250px; 
   margin: 10px;
   padding: 10px;
   padding-bottom: 50px;
-  border: 1px solid #ccc;
+  border: 1px solid #007bff;
   border-radius: 5px;
-  transition: background-color 0.3s ease; /* добавляем плавный переход */
+  transition: background-color 0.3s ease; 
 }
 
 .card img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* чтобы изображение заполняло всю площадь */
+  object-fit: contain;
   border-radius: 5px;
 }
 
@@ -34,6 +44,23 @@
   background-color: #0056b3;
 }
 
+.app button{
+  margin-top: 10px;
+  margin-left: 10px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+h1{
+  margin-left: 10px;
+}
+
+.app button:hover {
+  background-color: #0056b3;
+}
 
 .card-list {
   display: flex;
@@ -49,7 +76,7 @@
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 
 .modal button {
